--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "unified": "^11.0.4"
   },
   "devDependencies": {
+    "@types/node": "^24.10.1",
+    "@types/react": "^19.2.6",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.13.0",
     "eslint-config-next": "^15.0.0",
